--- a/Kaiserreich Korean Translation/localisation/KR_Qing_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Qing_l_english.yml
@@ -2,7 +2,7 @@ l_english:
 
 ### Focuses ###
 QIE_army_effort:0 "제국군 재건"
-QIE_army_effort_desc:0 "With the looming threat posed by Japan hanging over us we must start to drill and restructure our forces more effectively, ground combat is still key in tomorrow's wars and with adequate planning and preparation we will overcome any foe whether they be domestic or foreign. "
+QIE_army_effort_desc:0 "With the looming threat posed by Japan hanging over us we must start to drill and restructure our forces more effectively, ground combat is still key in tomorrow's wars and with adequate planning and preparation we will overcome any foe whether they be domestic or foreign."
 QIE_equipment_effort:0 "장비 현대화"
 QIE_equipment_effort_desc:0 "It is no longer sustainable to use German provided equipment without thought for the future. We must develop Chinese equipment within China for China!."
 QIE_motorization_effort:0 "말과 수레를 제거하라"
@@ -178,63 +178,63 @@ QIE_HHQ_ECO_REF_JAP:0 "쿵샹시 무역 개혁"
 QIE_HHQ_ECO_REF_AOG:0 "쿵샹시 무역 개혁"
 QIE_HHQ_ECO_LIM_20:0 "쿵샹시 제한적인 무역 개혁"
 QIE_HHQ_ECO_LIM_10:0 "쿵샹시 제한적인 무역 개혁"
-QIE_ECO_STE_REF:0 "Walther Stennes Modernisation Program"
-QIE_KEM_IND_PRO_GER:0 "Wang Kemin Industrial Program"
-QIE_KEM_IND_PRO_JAP:0 "Wang Kemin Industrial Program"
-QIE_KEM_IND_PRO_AOG:0 "Wang Kemin Industrial Program"
+QIE_ECO_STE_REF:0 "발터 슈테넨스의 현대화 계획"
+QIE_KEM_IND_PRO_GER:0 "왕 커민의 산업 계획"
+QIE_KEM_IND_PRO_JAP:0 "왕 커민의 산업 계획"
+QIE_KEM_IND_PRO_AOG:0 "왕 커민의 산업 계획"
 GER_DEM_SHAN:0 "독일이 남부 산시를 요구함"
 GER_NO_DEM_SHAN:0 "독일이 우리를 도움"
-GER_NO_PUYI:0 "Germany Stages a Coup"
-QIE_GER_END:0 "Ended Trade with us"
-QIE_GER_COUP_SUCC:0 "The Coup Succeed"
-GERQIE_RET_AOG:0 "Ceded A.O.G. territory to us"
-GERQIE_NO_RET_AOG:0 "Germany Supports the Status Quo"
-QIE_COOP_SQI_GER:0 "Shangqing Concessions"
-QIE_COOP_SQI_RUS:0 "Shangqing Concessions"
-QIE_COOP_SQI_JAP:0 "Shangqing Concessions"
-QIE_COOP_SQI_CAN:0 "Shangqing Concessions"
-GER_QIE_GIVE_AOG:0 "Ceded A.O.G. territory to Qing"
-GER_QIE_NO_GIVE_AOG:0 "Germany Supports the Status Quo"
-GER_QIE_ALI:0 "A.O.G. in exchange for an Alliance"
-AOG_QIE_ARMS:0 "A.O.G. threatens us with German arms"
-AOG_GER_ARMS:0 "A.O.G. threatens Qing with German arms"
-AOG_QIE_NEG:0 "A.O.G. back to the table"
-QIE_GER_BETR:0 "Qing threatens us with war!"
-QIE_AOG_BETR:0 "Qing threatens us with war!"
+GER_NO_PUYI:0 "독일이 쿠데타를 일으킴"
+QIE_GER_END:0 "우리와의 무역을 끝냄"
+QIE_GER_COUP_SUCC:0 "쿠데타가 성공함"
+GERQIE_RET_AOG:0 "동아시아회사 영토를 우리에게 이양함"
+GERQIE_NO_RET_AOG:0 "독일이 현상유지를 지지함"
+QIE_COOP_SQI_GER:0 "산청의 양보"
+QIE_COOP_SQI_RUS:0 "산청의 양보"
+QIE_COOP_SQI_JAP:0 "산청의 양보"
+QIE_COOP_SQI_CAN:0 "산청의 양보"
+GER_QIE_GIVE_AOG:0 "동아시아회사 영토를 청에게 이양함"
+GER_QIE_NO_GIVE_AOG:0 "독일이 현상유지를 지지함"
+GER_QIE_ALI:0 "동맹을 위해 동아시아 회사를 교환함"
+AOG_QIE_ARMS:0 "동아시아 회사가 독일군대로 우리를 위협함"
+AOG_GER_ARMS:0 "동아시아 회사가 독일군대로 청을 위협함"
+AOG_QIE_NEG:0 "동아시아 회사가 다시 협상테이블로 돌아감"
+QIE_GER_BETR:0 "청이 전쟁으로 우리를 위협하고 있습니다!"
+QIE_AOG_BETR:0 "청이 전쟁으로 우리를 위협하고 있습니다!"
 QIE_NO_GER_BETR:0 "청이 물러섬"
 QIE_NO_AOG_BETR:0 "청이 물러섬"
-QIE_LEC_ANE_80:0 "Qing annexes the Legation Cities"
-QIE_LEC_ANE_40:0 "Qing annexes the Legation Cities"
-QIE_LEC_PUP_20:0 "Qing puppets the Legation Cities"
-QIE_LEC_PUP_10:0 "Qing puppets the Legation Cities"
-QIE_LEC_REM_20:0 "Qing maintains the Legation Cities independence"
-QIE_LEC_REM_10:0 "Qing maintains the Legation Cities independence"
-QIE_YUN_WAR_RES:0 "Qing want our submission"
-QIE_YUN_LEAVE:0 "Qing ignores us"
-QIE_ignore:0 "Yunnan ignores us"
-GER_NEW_TRE_QIE:0 "Qing-German New Treaty"
-GER_NO_NEW_TRE_QIE:0 "Qing-German No New Treaty"
-GER_TRADE_SANC:0 "German Economic Sanctions"
-GER_TRADE_ACC:0 "Qing Accept Our Deal"
-QIE_NEW_MARKETS:0 "Qing searches for new markets"
-QIE_WANT_LAND:0 "Qing wants lands in exchange"
-QIE_MON_NEG:0 "Negotiations"
-QIE_MON_NO_NEG:0 "Qing no negotiates"
-QIE_TIB_NEG:0 "Negotiations"
-TIB_IGN_DEM:0 "Tibet ignored our demands"
-QIE_RET_STERN:0 "Qing returns Sternberg"
-QIE_KILL_STERN:0 "Qing executes Sternberg"
-QIE_NO_RET_STERN:0 "Qing gives exile to Sternberg"
-QIE_RET_TRANSIB:0 "Qing returns the Transsiberian as a gift"
+QIE_LEC_ANE_80:0 "청이 공사관 도시를 합병함"
+QIE_LEC_ANE_40:0 "청이 공사관 도시를 합병함"
+QIE_LEC_PUP_20:0 "청이 공사관 도시를 합병함"
+QIE_LEC_PUP_10:0 "청이 공사관 도시를 합병함"
+QIE_LEC_REM_20:0 "청이 공사관 도시의 독립을 유지함"
+QIE_LEC_REM_10:0 "청이 공사관 도시의 독립을 유지함"
+QIE_YUN_WAR_RES:0 "청이 우리의 복종을 원함"
+QIE_YUN_LEAVE:0 "청이 우리를 무시함"
+QIE_ignore:0 "윈난이 우리를 무시함"
+GER_NEW_TRE_QIE:0 "신 청-독 조약"
+GER_NO_NEW_TRE_QIE:0 "신 청-독 조약 없음"
+GER_TRADE_SANC:0 "독일 경제제재"
+GER_TRADE_ACC:0 "청이 우리의 거래를 수락함"
+QIE_NEW_MARKETS:0 "청이 새로운 시장을 몰색함"
+QIE_WANT_LAND:0 "청이 영토 교환을 원함"
+QIE_MON_NEG:0 "협상"
+QIE_MON_NO_NEG:0 "청이 협상하지 않음"
+QIE_TIB_NEG:0 "협상"
+TIB_IGN_DEM:0 "티베트가 우리 요구를 무시함"
+QIE_RET_STERN:0 "청이 슈테른베르크를 인도함"
+QIE_KILL_STERN:0 "청이 슈테른베르크를 처형함"
+QIE_NO_RET_STERN:0 "청이 슈테른베르크를 추방함"
+QIE_RET_TRANSIB:0 "청이 선물로 트란스시베리아를 반환함"
 QIE_RET_TRANSIB_NAP:0 "Qing returns the Transsiberian in exchange of a NAP"
-QIE_RET_TRANSIB_MON:0 "Qing returns the Transsiberian in exchange of Money"
-QIE_NO_RET_TRANSIB:0 "Qing keeps the Transsiberian"
-QIE_LIB_FNG:0 "Qing wants to liberate us"
-QIE_LIB_FNG_JAP:0 "Qing wants to liberate Fengtian"
-QIE_LEAVE_FNG:0 "Qing respects the Status Quo"
-QIE_FNG_NEG:0 "Qing wants to negotiate with us"
-QIE_FNG_NO_NEG:0 "Qing won't negotiate with us"
-FNG_NO_NEG:0 "Fengtian won't negotiate with us"
+QIE_RET_TRANSIB_MON:0 "청이 돈과 트란스시베리아를 교환함"
+QIE_NO_RET_TRANSIB:0 "청이 트란스시베리아를 계속 가지고 있음"
+QIE_LIB_FNG:0 "청이 우리를 해방시켜주기를 원함"
+QIE_LIB_FNG_JAP:0 "청이 봉천을 해방시키기를 원함"
+QIE_LEAVE_FNG:0 "청이 현재상태를 존중함"
+QIE_FNG_NEG:0 "청이 우리와 협상하기를 원함"
+QIE_FNG_NO_NEG:0 "청이 우리와 협상하기를 원하지 않음"
+FNG_NO_NEG:0 "봉천은 우리와 협상하지 않을 것임"
 FNG_yes:0 "봉천이 수락함"
 FNG_no:0 "봉천이 거부함"
 FNG_JAP_FREE:0 "봉천이 자유가 됨"
@@ -248,9 +248,9 @@ QIE_DEM_COL:0 "청이 우리 중국항구를 요구함"
 QIE_NO_DEM_COL:0 "Qing renounces claims to our Chinese Ports"
 QIE_DEM_COL_POR:0 "청이 마카오를 요구함"
 QIE_NO_DEM_COL_POR:0 "Qing renounces claims to Macau"
-QIE_DEM_VLA:0 "Qing demands Vladivostok"
-QIE_DEM_SAS_GER:0 "Qing demands South-East Asia"
-QIE_DEM_SAS:0 "Qing demands South-East Asia"
+QIE_DEM_VLA:0 "청이 블라디보스토크를 요구함"
+QIE_DEM_SAS_GER:0 "청이 동남아시아를 요구함"
+QIE_DEM_SAS:0 "청이 동남아시아를 요구함"
 QIE_JOIN_COA:0 "We joined their Coalition"
 CHI_VS_COAL:0 "We joined Sino Coalition"
 QIE_NO_COA:0 "We refused to join their Coalition"
@@ -411,28 +411,28 @@ qing.40.d:0 "The German-backed Qing Empire has established its control over Shaa
 qing.40.a:0 "Demand a third of their newly re-conquered territory"
 qing.40.b:0 "It is good to have a strong buffer between our interests and Japan's"
 qing.40.c:0 "Pu Yi isn't adhering to our guide-lines, its time to replace him"
-qing.41.t:0 "The German Demands"
+qing.41.t:0 "독일의 요구"
 qing.41.d:0 "Berlin has congratulated us on our conquest of Shaanxi and putting down the Yan'an Rebellion, but the representative of Germany states that we should allow the A.O.G. to administer the southernmost parts of our newly gained territory."
-qing.41.a:0 "Yes, we still need German protection"
-qing.41.b:0 "It is time to rid ourselves and our country of the Germans!"
-qing.42.t:0 "The German Coup"
-qing.42.d:0 "The Germans believe Pu Yi has outlived his usefulness, and have approached the elite of the Qing Empire with the plan of backing a coup d'etat to replace him with a more pliant Emperor."
-qing.42.a:0 "The Emperor has grown ill, he must be replaced!"
-qing.42.b:0 "The Germans have overstayed their welcome in China, begin a purge!"
-qing.43.t:0 "The Qing Break Free!"
-qing.43.d:0 "After we issued our demands to the Emperor, they have not only turned down our demands but decided to form an independent policy and break away from German influence."
-qing.43.a:0 "The Qing were a mistake, destroy them!"
-qing.43.b:0 "There is nothing we can do, let them go"
-qing.44.t:0 "German Factories"
+qing.41.a:0 "그래, 우린 아직 독일의 보호가 필요하다"
+qing.41.b:0 "이제 우리의 나라를 위해 독일인들을 제거할 시간이다!"
+qing.42.t:0 "독일의 쿠데타"
+qing.42.d:0 "독일인들은 푸이가 쓸모 없어질 만큼 충분히 살았다고 생각하고 있으며, 다루기 쉬운 황제로 교체하려고 쿠데타를 지원하기 위해 대청제국의 지도부에 접근해왔습니다."
+qing.42.a:0 "황제께서 아프시다, 교체해야한다!"
+qing.42.b:0 "독일인들은 중국에 너무 오래 머물렀다, 저들을 숙청하라!"
+qing.43.t:0 "청이 해방되다!"
+qing.43.d:0 "우리가 황제교체에 대한 요구를 청이 거부한 이후, 청은 우리의 요구를 거부했을뿐 아니라 독립 정책을 펼치고 독일의 영향으로부터 벗어나기로 결정했습니다."
+qing.43.a:0 "청은 실수한거다, 저들을 박살내라!"
+qing.43.b:0 "할 수있는게 없다, 납둬라"
+qing.44.t:0 "독일 공장"
 qing.44.d:0 "After we have begun to cleanse ourselves of German influence, German-owned factories across our entire empire have shut down. Although we were able to save a majority of our industrial material from the Germans, without their skilful leadership and presence of significant German capital it will be a long time before these factories will be able to operate."
-qing.44.a:0 "Let them go"
-qing.44.b:0 "NO!, we cannot let this happen! Buy them now!"
-qing.45.t:0 "The War with Berlin"
+qing.44.a:0 "납둬라"
+qing.44.b:0 "아니다!, 그렇게 하기를 납둘 수 없다! 전부 사들여라!"
+qing.45.t:0 "독일과의 전쟁"
 qing.45.d:0 "The Germans are mobilising their troops in Shangdong and Indochina after war was declared against our nation. We expect the A.O.G. will soon follow their masters and join them in war against us."
-qing.45.a:0 "Let them come!"
-qing.46.t:0 "German military mission leaves Qing Empire"
-qing.46.d:0 "Following our decision to wage war against German Empire, German military mission present in country since 1926 was forced to leave!"
-qing.46.a:0 "Finally they leave!"
+qing.45.a:0 "올 테면 와봐라!"
+qing.46.t:0 "독일 군사 고문이 청을 떠났습니다"
+qing.46.d:0 "독일과 전쟁을 택한 이후로, 1926년 이래 우리나라에 파견 된 독일 군사 고문이 강제로 떠나게 되었습니다."
+qing.46.a:0 "드디어 떠났군!"
 qing.47.t:0 "The Shangqing rebels"
 qing.47.d:0 "Before we can even hope about reclaiming territories currently controlled by the A.O.G. and Yunnan, we must place lots of pressure on the Shangqing in order to force them to give up their foolish struggle, which is destabilising our fragile internal stability."
 qing.47.a:0 "They will respond to threats"
@@ -442,11 +442,11 @@ qing.48.t:0 "The Qing threatens us!"
 qing.48.d:0 "The increasingly powerful Qing Empire have set their eyes upon us as our further existence show to the world weakness of the Qing dynasty and prevents their further expansion. Just a few days ago, they have issued an ultimatum in which they demand our unconditional and immediate surrender or their armed forces will obliterate us. How shall we react to this ultimatum?"
 qing.48.a:0 "Further resistance is detrimental to China."
 qing.48.b:0 "Refuse their absurd demands"
-qing.49.t:0 "Negotiations with Qing Empire"
+qing.49.t:0 "청제국과의 협상"
 qing.49.d:0 "The increasingly powerful Qing Empire have set their eyes upon us as our further existence show to the world weakness of the Qing dynasty and prevents their further expansion. Just a few days ago, they have issued an offer to us, in which they promise to offer pardon for the whole milenarian movement and promise to implement part of our reforms into the real life. How shall we respond to this proposal?"
-qing.49.a:0 "Accept their offer"
-qing.49.b:0 "Never!"
-qing.49.C:0 "Demand Concessions!"
+qing.49.a:0 "제안을 받아들인다"
+qing.49.b:0 "절대로!"
+qing.49.C:0 "양보를 요구한다!"
 qing.50.t:0 "Shangqing rebels refused our demands"
 qing.50.d:0 "Arrogant leadership of Shangqing rebels refused our reasonable demands and talks with them have broken down. Only war can bring this fools to accept our inevitable rule over China."
 qing.50.a:0 "War will solve this!"
@@ -485,10 +485,10 @@ qing.59.t:0 "Let the negotiations begin"
 qing.59.d:0 "The Board of the A.O.G., that controls the southern half of our country, has come to the table to renegotiate status of the territories which legally belong to our empire, but in reality they are administered from 1926 by A.O.G."
 qing.59.a:0 "Press for full unity"
 qing.59.b:0 "Offer them positions with our Government"
-qing.60.t:0 "Status of A.O.G."
+qing.60.t:0 "동아시아 회사의 지위."
 qing.60.d:0 "Once the A.O.G. decided to fully rejoin the Qing Empire there were several options open on how to reassert control over territories once governed by A.O.G. We may either integrate these territories immediately, which may cause serious administration problems and potentially disrupt stability of the southern territories or inegrate them gradually."
-qing.60.a:0 "Reclaim that which is rightfully ours!"
-qing.60.b:0 "Let them keep their semi-independent style"
+qing.60.a:0 "정당한 우리의 영토에 영유권 주장을하자!"
+qing.60.b:0 "반독립한 상태로 만들어놓자"
 qing.61.t:0 "The Qing are asking for arbitration"
 qing.61.d:0 "The Qing are trying to reassert control over the Southern China, which is administered by the A.O.G. from 1926 treaty of Nanjing - what course of action should we take at the table?"
 qing.61.a:0 "We should force the A.O.G. to give in - the legal precedent is clear"
