--- a/Kaiserreich Korean Translation/localisation/KR_Spartakiade_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Spartakiade_l_english.yml
@@ -65,20 +65,20 @@ Spartakiade.22.a:0 "We will remember this!"
 
 Spartakiade.23.t:0 "Choosing a Host City for the Spartakiade"
 Spartakiade.23.d:0 "As usual, we need to start thinking about the 1937 Spartakiade. Where shall it be hosted? How many contests will it have? How many delegations will come? The most important question however is where we should host the Spartakiade."
-Spartakiade.23.a:0 "A French city"
-Spartakiade.23.b:0 "A British city"
+Spartakiade.23.a:0 "프랑스 도시"
+Spartakiade.23.b:0 "영국 도시"
 
 Spartakiade.24.t:0 "Which French city will host the Spartakiade?"
 Spartakiade.24.d:0 "We should choose French city which will have honour of hosting the 1937 Spartakiade."
-Spartakiade.24.a:0 "Paris!"
+Spartakiade.24.a:0 "파리!"
 Spartakiade.24.b:0 "Dijon to show Germans that we are superior!"
-Spartakiade.24.c:0 "Bordeaux"
-Spartakiade.24.e:0 "Marseille"
+Spartakiade.24.c:0 "보르도"
+Spartakiade.24.e:0 "마르세유"
 
 Spartakiade.25.t:0 "Which British City will host the Spartakiade?"
 Spartakiade.25.d:0 "Several beautiful cities of our great Union have declared their willingness to host the Spartakiade. Which one shall have honour of hosting the greatest Syndicalist sport event of 1937?"
 Spartakiade.25.a:0 "런던!"
 Spartakiade.25.b:0 "에든버러!"
-Spartakiade.25.c:0 "맨체스터r"
-Spartakiade.25.e:0 "Carlisle"
+Spartakiade.25.c:0 "맨체스터"
+Spartakiade.25.e:0 "칼라일"
 Spartakiade.25.f:0 "카디프"
