--- a/Kaiserreich Korean Translation/localisation/KR_Strategic_region_names_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Strategic_region_names_l_english.yml
@@ -3,7 +3,7 @@ l_english:
  STRATEGICREGION_2:0 "북부 잉글랜드"
  STRATEGICREGION_3:1 "스코틀랜드"
  STRATEGICREGION_4:0 "아일랜드"
- STRATEGICREGION_5:0 "베네룩스 지방"
+ STRATEGICREGION_5:0 "롤런드"
  STRATEGICREGION_6:0 "북서부 독일"
  STRATEGICREGION_7:1 "남부 독일"
  STRATEGICREGION_8:0 "동부 독일"
