--- a/Kaiserreich Korean Translation/localisation/KR_Switzerland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Switzerland_l_english.yml
@@ -362,10 +362,10 @@ swiss.7.e:0 "광범위한 선거 운동."
 swiss.8.t:0 "국민 투표 중"
 swiss.8.d:0 "이 이벤트는 플레이어에게 보이지 않아야 합니다. 만약 보인다면, 버그 리포트를 하십시오."
 swiss.8.a:0 "제발요!"
-swiss.9.t:0 "The National Protection Referendum Succeeds"
+swiss.9.t:0 "헌법 개정 국민투표 통과"
 swiss.9.d:0 "The referendum has succeeded, and state forces have been given greater freedoms in their ability to combat extremist threats to the stability of the nation."
 swiss.9.a:0 "Wonderful!"
-swiss.10.t:0 "The National Protection Referendum Fails"
+swiss.10.t:0 "헌법 개정 국민투표 통과 실패"
 swiss.10.d:0 "It seems that the people are not yet ready for an increase in state power. They have voted down the referendum and the powers of the police will remain unchanged."
 swiss.10.a:0 "The people did not support it."
 swiss.11.t:0 "Referendum: Combat the Economic Crisis"
@@ -377,10 +377,10 @@ swiss.11.e:0 "광범위한 선거 운동."
 swiss.12.t:0 "국민 투표 중"
 swiss.12.d:0 "이 이벤트는 플레이어에게 보이지 않아야 합니다. 만약 보인다면, 버그 리포트를 하십시오."
 swiss.12.a:0 "제발요!"
-swiss.13.t:0 "The Economic Referendum Succeeds"
+swiss.13.t:0 "경제 국민투표 통과"
 swiss.13.d:0 "The economic referendum has succeeded, and the government now has free reign to solve the Black Monday crisis with its new extraordinary powers."
 swiss.13.a:0 "Wonderful!"
-swiss.14.t:0 "The Economic Referendum Fails"
+swiss.14.t:0 "경제 국민투표 통과 실패"
 swiss.14.d:0 "It seems that the people do not believe that the government needs extra authority to solve the crisis. What does this mean for our economy?"
 swiss.14.a:0 "The people did not support it."
 swiss.15.t:0 "국민 투표: 생디칼리스트 연합 금지"
@@ -392,10 +392,10 @@ swiss.15.e:0 "광범위한 선거 운동."
 swiss.16.t:0 "국민 투표 중"
 swiss.16.d:0 "이 이벤트는 플레이어에게 보이지 않아야 합니다. 만약 보인다면, 버그 리포트를 하십시오."
 swiss.16.a:0 "제발요!"
-swiss.17.t:0 "The Syndicalist Union Referendum Succeeds"
+swiss.17.t:0 "생디칼리스트 연합 투표 통과"
 swiss.17.d:0 "Despite strong Syndicalist support is the Western regions of Switzerland, the referendum has succeeded. All existing Syndicalist Trade Unions are now dissolved and none are legally allowed to form again. This is sure to raise the ire of the French."
 swiss.17.a:0 "Wonderful!"
-swiss.18.t:0 "The Syndicalist Union Referendum Fails"
+swiss.18.t:0 "생디칼리스트 연합 투표 통과 실패"
 swiss.18.d:0 "It seems that Syndicalist support was too strong, and the referendum has failed. Syndicalists will continue to meet as they have done over the past few years."
 swiss.18.a:0 "The people did not support it."
 swiss.19.t:0 "국민 투표: 군대 재조직"
@@ -407,10 +407,10 @@ swiss.19.e:0 "광범위한 선거 운동."
 swiss.20.t:0 "국민 투표 중"
 swiss.20.d:0 "이 이벤트는 플레이어에게 보이지 않아야 합니다. 만약 보인다면, 버그 리포트를 하십시오."
 swiss.20.a:0 "제발요!"
-swiss.21.t:0 "The Army Referendum Succeeds"
+swiss.21.t:0 "군대 국민투표 통과"
 swiss.21.d:0 "The army referendum has succeeded, and reforms are to begin immediately within the ranks of our armed forces."
 swiss.21.a:0 "훌륭하군!"
-swiss.22.t:0 "The Army Referendum Fails"
+swiss.22.t:0 "군대 국민투표 통과 실패"
 swiss.22.d:0 "The people have struck down our proposed reforms to the army. The army will continue to be formed from reserve troops for the foreseeable future."
 swiss.22.a:0 "The people did not support it."
 swiss.23.t:0 "국민 투표: 프리메이슨리의 지위"
@@ -422,10 +422,10 @@ swiss.23.e:0 "광범위한 선거 운동."
 swiss.24.t:0 "국민 투표 중"
 swiss.24.d:0 "이 이벤트는 플레이어에게 보이지 않아야 합니다. 만약 보인다면, 버그 리포트를 하십시오."
 swiss.24.a:0 "제발요!"
-swiss.25.t:0 "The Freemasonry Referendum Succeeds"
+swiss.25.t:0 "프리메이슨 국민투표 통과"
 swiss.25.d:0 "The referendum has passed, and Freemasons have been barred from official meetings inside the nation. While there is likely little effect on the day-to-day of the government's operation, the public's support of the state has risen with the news."
 swiss.25.a:0 "Wonderful!"
-swiss.26.t:0 "The Freemasonry Referendum Fails"
+swiss.26.t:0 "프리메이슨 국민투표 통과 실패"
 swiss.26.d:0 "The referendum to ban Freemasonry from Switzerland has failed. Is this the influence of the Freemasons at work?"
 swiss.26.a:0 "The people did not support it."
 swiss.27.t:0 "국민 투표: 상품 운송에 관하여"
@@ -437,10 +437,10 @@ swiss.27.e:0 "광범위한 선거 운동."
 swiss.28.t:0 "국민 투표 중"
 swiss.28.d:0 "이 이벤트는 플레이어에게 보이지 않아야 합니다. 만약 보인다면, 버그 리포트를 하십시오."
 swiss.28.a:0 "제발요!"
-swiss.29.t:0 "The Transportation Referendum Succeeds"
+swiss.29.t:0 "운송 국민투표 통과"
 swiss.29.d:0 "The referendum on the transportation of goods has succeeded, and our economy is likely to get a small boost from this."
 swiss.29.a:0 "Wonderful!"
-swiss.30.t:0 "The Transportation Referendum Fails"
+swiss.30.t:0 "운송 국민투표 통과 실패"
 swiss.30.d:0 "The referendum on the transport of goods has failed. The roads will remain unchanged, for now."
 swiss.30.a:0 "The people did not support it."
 swiss.31.t:0 "국민 투표: 연방 정부 폐지"
@@ -585,7 +585,7 @@ swiss.72.t:0 "Vorarlberg Defects"
 swiss.72.d:0 "With our neighbour Austria on the verge of complete collapse in their ongoing war, some of its citizens have taken their futures into their own hands. The Bundesland of Vorarlberg, right on our eastern border with Austria, has held a public referendum to leave Austria behind and seek union with Switzerland.\n\nOver 80% of voters agreed with the proposal, and the local authorities have wasted no time pleading their case with us, hoping to avoid whatever cruel peace awaits them if Austria were to fall in their current war. The citizens of Vorarlberg are certainly willing, should we accept this new member of the Swiss state?"
 swiss.72.a:0 "We gladly accept."
 swiss.72.b:0 "It is too risky."
-swiss.73.t:0 "Vorarlberg's Defection"
+swiss.73.t:0 "포어아를베르크의 전향"
 swiss.73.d:0 "It is no secret that things are not going well in the current war. Many key cities across the empire are in our enemy's hands, and morale is low. However, news has now reached us that the traitorous province of Vorarlberg has voted to leave the Empire entirely, and joined Switzerland instead! \n\nCan these traitors not see that a turn of fortunes is soon on its way? We will have to deal with these traitors, in time."
 swiss.73.a:0 "Damn them!"
 swiss.74.t:0 "Germany has Intervened in the Crisis"
@@ -960,7 +960,7 @@ SWI_Savoie_decisions_desc:0 "Since the collapse of the French Republic, Switzerl
 ### Other Stuff ###
 SWI_FRA_coop:0 "Swiss-French Cooperation"
 SWI_FRA_friendship:0 "Swiss-French Reconciliation"
-SWI_romandy_outcome:0 "We must wait for the outcome of the Savoyard Crisis to determine our political situation."
+SWI_romandy_outcome:0 "정치 상황을 정하기 위해 Savoyard 위기의 결과를 기다려야 합니다."
 SWI_romandy_starter:0 "§RThe political firestorm in Haute-Savoie must be dealt with immediately.§!"
 SWI_choose_an_alliance:0 "We must first find ourselves a possible ally before pursuing this further."
 SWI_AUS:0 "Austria has supported us"
@@ -968,18 +968,18 @@ SWI_ITA:0 "Italy has supported us"
 swissair:0 "Swissair"
 SWI_FRA_negotiations_fail:0 "Failed Negotiations"
 SWI_foreign_volunteers:0 "You will gain §Y6§! Militia Divisions formed from disorganised foreign volunteers. \n"
-SWI_swiss_ski_troops:0 "You will gain §Y3§! Mountain Divisions. \n"
+SWI_swiss_ski_troops:0 "§Y5§!개의 산악 부대를 얻을 것입니다. \n"
 SWI_swiss_border_troops:0 "You will gain §Y6§! Militia Divisions to man your border defences. \n"
-BIRCHER_PLAN:0 "Eugen Bircher has been elected General"
-GUISAN_PLAN:0 "Henri Guisan has been elected General"
-SWI_GER_alliance:0 "We have allied with Germany"
-SWI_traitors:0 "Recognized the Commune"
+BIRCHER_PLAN:0 "오이겐 비르헤르가 원수로 뽑힐 것입니다."
+GUISAN_PLAN:0 "앙리 기장이 원수로 뽑힐 것입니다."
+SWI_GER_alliance:0 "우리는 독일과 동맹상태입니다."
+SWI_traitors:0 "코뮌 재조직"
 SWI_totalist_win:0 "Totalists have received popular support"
 SWI_syndicalist_win:0 "Syndicalists have received popular support"
 SWI_complete_betrayal:0 "Betrayed Us!"
-SWI_AUS_alliance:0 "We have allied with Austria"
-SWI_ITA_alliance:0 "We have allied with Italy"
-SWI_bend_france:0 "We have bent to the French will"
+SWI_AUS_alliance:0 "우리는 오스트리아와 동맹상태입니다."
+SWI_ITA_alliance:0 "우리는 이탈리아와 동맹상태입니다."
+SWI_bend_france:0 "프랑스의 의지에 굴복함"
 SWI_peace:0 "We have resolved the crisis without bloodshed"
 SWI_volunteers_arrive:0 "§Y2§! Foreign Divisions Arrive\n"
 SWI_unlikely:0 "The Swiss are very unlikely to accept.\n"
