--- a/Kaiserreich Korean Translation/localisation/KR_Traits_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Traits_l_english.yml
@@ -23,19 +23,19 @@ hog_silent_workhorse:0 "조용한 일꾼"
 hog_smiling_oilman:0 "미소짓는 오일맨"
 hog_spiritual_leader:0 "영적 지도자"
 
-hog_the_black_baron:0 "the Black Baron"
+hog_the_black_baron:0 "검은 남작"
 hog_the_gun_salute_legislature:0 "The Gun-Salute Legislature"
 hog_the_lion_of_africa:0 "아프리카의 사자"
 hog_the_new_administrator:0 "새로운 행정관"
 hog_the_peasant_marshal:0 "농민 참모"
 hog_the_tiger:0 "호랑이"
-hog_the_vozhd:0 "보즈드"
+hog_the_vozhd:0 "소비에트 지도자"
 hog_totalist_chairman:0 "총회 의장"
 hog_gentleman_politician:0 "신사 정치인"
 hog_supreme_ruler:0 "최고 통치자"
 
 ### Economy Minister ###
-eco_administrative_genius:0 "행정 천재"
+eco_administrative_genius:0 "Administrative Genius"
 eco_army_reform_committee:0 "Army Reform Committee"
 eco_balanced_budget_economy:0 "Balanced Budget Economy"
 eco_bank_president:0 "은행 대통령"
@@ -50,16 +50,16 @@ eco_mixed_economy:0 "혼합된 경제"
 eco_oil_baron:0 "오일 바론"
 eco_planned_economy_proponent:0 "Planned Economy Proponent"
 eco_reformer:0 "개혁가"
-eco_resource_industrialist:0 "Resource Industrialist"
-eco_steel_magnate:0 "Steel Magnate"
-eco_theoretical_scientist:0 "Theoretical Scientist"
-eco_railway_magnate:0 "Railway Magnate"
+eco_resource_industrialist:0 "자원 산업가"
+eco_steel_magnate:0 "강철 거물"
+eco_theoretical_scientist:0 "이론 과학자"
+eco_railway_magnate:0 "철도 거물"
 
 eco_air_superiority_proponent:0 "Air Superiority Proponent"
 eco_battlefield_support_proponent:0 "Air Support Proponent"
 eco_battle_fleet_proponent:0 "Battle Fleet Proponent"
 eco_carrier_proponent:0 "Carrier Proponent"
-eco_infantry_proponent:0 "Infantry Proponent"
+eco_infantry_proponent:0 "보병 Proponent"
 eco_naval_aviation_proponent:0 "Naval Aviation Proponent"
 eco_strategic_destruction_proponent:0 "Strategic Air Proponent"
 eco_u_boat_proponent:0 "U-Boat Proponent"
@@ -102,7 +102,7 @@ int_industrial_specialist:0 "산업 전문가"
 int_naval_intelligence_specialist:0 "해군 정보 전문가"
 int_o:0 ""O""
 
-### mhc Minister 
+### mhc Minister
 cos_school_of_manoeuvre:0 "School of Manoeuvre"
 cos_school_of_fire_support:0 "School of Fire Support"
 cos_school_of_mass_combat:0 "School of Mass Combat"
@@ -114,7 +114,7 @@ cos_school_of_commando_operations:0 "School of Commando Operations"
 carm_elastic_defence_doctrine:0 "Elastic Defence Doctrine"
 carm_static_defence_doctrine:0 "Static Defence Doctrine"
 carm_decisive_battle_doctrine:0 "Decisive Battle Doctrine"
-carm_armoured_spearhead_doctrine:0 "Armoured Spearhead Doctrine"
+carm_armoured_spearhead_doctrine:0 "기갑ed Spearhead Doctrine"
 carm_guns_and_butter_doctrine:0 "Guns and Butter Doctrine"
 carm_commando_doctrine:0 "Commando Doctrine"
 carm_doctrine_of_autonomy:0 "Doctrine of Autonomy"
@@ -136,10 +136,10 @@ cair_vertical_envelopment_doctrine:0 "Vertical Envelopment Doctrine"
 cair_the_red_baron:0 "The Red Baron"
 
 cc_leader:0 "장군"
-fm_leader:0 "육군 원수"
+fm_leader:0 "원수"
 navy_leader:0 "제독"
 
-ideological_crusader:0 "이념 십자군"
+ideological_crusader:0 "Ideological Crusader"
 popular_figurehead:0 "Popular Figurehead"
 silent_workhorse:0 "조용한 일꾼"
 compassionate_gentleman:0 "Compassionate Gentleman"
@@ -147,26 +147,26 @@ prince_of_terror:0 "테러의 왕자"
 backroom_backstabber:0 "Backroom Backstabber"
 smooth_talking_charmer:0 "Smooth-Talking Charmer"
 fortification_engineer:0 "Fortification Engineer"
-war_industrialist:0 "War Industrialist"
-captain_of_industry:0 "Captain of Industry"
+war_industrialist:0 "전시 산업가"
+captain_of_industry:0 "산업 대장"
 armaments_organizer:0 "Armaments Organiser"
 quartermaster_general:0 "Quartermaster General"
-rocket_scientist:0 "Rocket Scientist"
-nuclear_scientist:0 "Nuclear Scientist"
-blitzkrieg_theorist:0 "Blitzkrieg Theorist"
-military_theorist:0 "Military Theorist"
-air_warfare_theorist:0 "Air Warfare Theorist"
+rocket_scientist:0 "로켓 과학자"
+nuclear_scientist:0 "핵 과학자"
+blitzkrieg_theorist:0 "전격전 이론가"
+military_theorist:0 "군사 이론가"
+air_warfare_theorist:0 "공중전 이론가"
 dive_bomber:0 "Dive Bomber"
 victory_through_airpower:0 "Victory Through Air Power"
 close_air_support_proponent:0 "Close Air Support Proponent"
 assault_avaition:0 "Assault Aviation"
-naval_theorist:0 "Naval Theorist"
+naval_theorist:0 "해군 이론가"
 naval_aviation_pioneer:0 "Naval Aviation Pioneer"
 grand_fleet_proponent:0 "Grand Fleet Proponent"
 submarine_specialist:0 "Submarine Specialist"
-tank_manufacturer:0 "Tank Designer"
-artillery_manufacturer:0 "Artillery Designer"
-infantry_equipment_manufacturer:0 "Infantry Equipment Designer"
+tank_manufacturer:0 "전차 설계자"
+artillery_manufacturer:0 "대포 설계자"
+infantry_equipment_manufacturer:0 "보병 Equipment Designer"
 motorized_equipment_manufacturer:0 "Motorised Equipment Designer"
 naval_manufacturer:0 "Ship Designer"
 industrial_concern:0 "Industrial Concern"
@@ -196,21 +196,21 @@ army_chief_old_guard:0 "Old Guard"
 army_entrenchment_1:1 "Entrenchment"
 army_entrenchment_2:1 "Entrenchment"
 army_entrenchment_3:1 "Entrenchment"
-army_armored_1:1 "Armour"
-army_armored_2:1 "Armour"
-army_armored_3:1 "Armour"
-army_artillery_1:1 "Artillery"
-army_artillery_2:1 "Artillery"
-army_artillery_3:1 "Artillery"
-army_infantry_1:1 "Infantry"
-army_infantry_2:1 "Infantry"
-army_infantry_3:1 "Infantry"
+army_armored_1:1 "기갑"
+army_armored_2:1 "기갑"
+army_armored_3:1 "기갑"
+army_artillery_1:1 "포병"
+army_artillery_2:1 "포병"
+army_artillery_3:1 "포병"
+army_infantry_1:1 "보병"
+army_infantry_2:1 "보병"
+army_infantry_3:1 "보병"
 army_commando_1:1 "Commando"
 army_commando_2:1 "Commando"
 army_commando_3:1 "Commando"
-army_cavalry_1:1 "Cavalry"
-army_cavalry_2:1 "Cavalry"
-army_cavalry_3:1 "Cavalry"
+army_cavalry_1:1 "기병"
+army_cavalry_2:1 "기병"
+army_cavalry_3:1 "기병"
 army_regrouping_1:1 "Army Regrouping"
 army_regrouping_2:1 "Army Regrouping"
 army_regrouping_3:1 "Army Regrouping"
@@ -330,13 +330,13 @@ winter_specialist:0 "Winter Specialist"
 winter_specialist_desc:0 "Possesses an intuitive understanding of the difficulties of fighting in Cold conditions."
 trait_engineer:0 "Engineer"
 trait_engineer_desc:0 "Adept in the arts of crossing rivers and constructing field fortifications."
-fortress_buster:0 "Fortress Buster"
+fortress_buster:0 "참호 파괴자"
 fortress_buster_desc:0 "Assaulting a Fort holds no terror for this officer."
 panzer_leader:0 "Panzer Leader"
 panzer_leader_desc:0 "A natural with Tanks and Mechanised forces."
 commando:0 "Commando"
 commando_desc:0 "Skilled in Amphibious operations, Air Assaults, and Cold weather conditions - the Commando is a man of many talents."
-fast_planner:0 "Fast Planner"
+fast_planner:0 "빠른 계획가"
 fast_planner_desc:0 "Knows all the shortcuts when preparing for battle - Efficiency is key!"
 thorough_planner:0 "Thorough Planner"
 thorough_planner_desc:0 "A strategic master mind. Given time, the well-laid plan will be the strongest."
@@ -344,7 +344,7 @@ organisational_leader:0 "Organisation First"
 organisational_leader_desc:0 "Knows every trick to get reinforcements faster than anyone."
 inspirational_leader:0 "Charismatic"
 inspirational_leader_desc:0 "A natural leader. Men will face their worst fears when backed by a powerful leader."
-desert_fox:0 "Desert Fox"
+desert_fox:0 "사막 여우"
 desert_fox_desc:0 "Entirely at home when fighting in a Desert."
 swamp_fox:0 "Swamp Fox"
 swamp_fox_desc:0 "While somewhat soggy, the Swamp Fox knows his way around Swamps and Marshes."
@@ -370,17 +370,17 @@ air_controller:0 "Air Controller"
 air_controller_desc:0 "An expert in the nascent field of naval aviation, the Air Controller is a natural choice to command carriers."
 naval_invader:0 "Invader"
 naval_invader_desc:0 "An expert in performing naval invasions. The perfect guy for preparing an invasion of a hostile beach and carrying it out."
-bearer_of_artillery:0 "Bearer of Artillery"
+bearer_of_artillery:0 "Bearer of 포병"
 bearer_of_artillery_desc:0 "Never drop a crate!"
-dictator:0 "Dictator"
-CAS_manufacturer:0 "CAS Designer"
+dictator:0 "독재자"
+CAS_manufacturer:0 "근접지원항공기 설계자"
 light_aircraft_manufacturer:0 "Light aircraft designer"
 medium_aircraft_manufacturer:0 "Medium aircraft designer"
 heavy_aircraft_manufacturer:0 "Heavy aircraft designer"
 naval_aircraft_manufacturer:0 "Naval aircraft designer"
 fast_tank_manufacturer:0 "Mobile tank designer"
-medium_tank_manufacturer:0 "Tank designer"
-heavy_tank_manufacturer:0 "Heavy tank designer"
+medium_tank_manufacturer:0 "전차 설계자"
+heavy_tank_manufacturer:0 "중전차 설계자"
 pacific_fleet_naval_manufacturer:0 "Pacific fleet designer"
 atlantic_fleet_naval_manufacturer:0 "Atlantic fleet designer"
 raiding_fleet_naval_manufacturer:0 "Raiding fleet designer"
@@ -394,7 +394,7 @@ superior_firepower_expert:0 "Superior Firepower Expert"
 grand_battle_plan_expert:0 "Grand Battle-plan Expert"
 mass_assault_expert:0 "Mass Assault Expert"
 warrior_code:0 "Warrior Code"
-dislikes_germany:0 "Dislikes Germany"
+dislikes_germany:0 "독일 혐오자"
 staunch_constitutionalist:0 "Staunch Constitutionalist"
 cornered_fox:0 "Cornered Fox"
 stout_defender:0 "Stout Defender"
@@ -403,7 +403,18 @@ permanent_revolutionary:0 "Permanent Revolutionary"
 triumphant_revolutionary:0 "Triumphant Revolutionary"
 inexperienced_imperialist:0 "Inexperienced Imperialist"
 spirit_of_genghis:0 "Spirit Of Genghis"
-stalins_puppet:0 "Stalin's Puppet"
+stalins_puppet:0 "스탈린의 꼭두각시"
 stalins_puppet_desc:0 "As loyal as he is patriotic, he will never betray the International, the plight of the worker, or his home country. In that order."
 exiled:0 "Exiled"
 exiled_desc:0 "Under threat of persecution they have spent much of the recent years of political turmoil abroad."
+
+### Unit Leader Traits ###
+artillery_officer:0 "포병 Officer"
+artillery_officer_desc:0 "Trained as an artillery offier."
+artillery_specialist:0 "포병 Specialist"
+artillery_specialist_desc:1 "Skilled at directing artillery in combat."
+artillery_expert:0 "포병 Expert"
+artillery_expert_desc:1 "A true expert in directing artillery."
+artillery_ratio_over_30:1 "포병 ratio > §H30%§!"
+four_musketeers:0 "Four Musketeers"
+four_musketeers_desc:0 "Being regarded as 'backbone' of the modern Siamese Chief of Staff"
