--- a/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
@@ -71,7 +71,7 @@ l_english:
  STATE_69:0 "도이치뵈멘"
  STATE_70:0 "니트라"
  STATE_71:0 "세페시"
- STATE_72:1 "북부 샨"
+ STATE_72:1 "상부 샨"
  STATE_73:0 "마러머로시"
  STATE_74:0 "도이치메렌"
  STATE_75:0 "모라바"
@@ -105,7 +105,7 @@ l_english:
  STATE_103:0 "리카"
  STATE_104:0 "보스나"
  STATE_105:0 "츠르나고라"
- STATE_106:0 "마케도니아"
+ STATE_106:0 "마케도니야"
  STATE_107:0 "베오그라드"
  STATE_108:0 "모라바"
  STATE_109:0 "포사비나"
@@ -125,7 +125,7 @@ l_english:
  STATE_123:0 "콘월"
  STATE_124:0 "고틀란드"
  STATE_125:0 "이스트 앵글리아"
- STATE_126:0 "대런던지구"
+ STATE_126:0 "대런던 지구"
  STATE_127:0 "서식스"
  STATE_128:0 "웨스트미들랜즈"
  STATE_129:0 "이스트미들랜즈"
@@ -136,7 +136,7 @@ l_english:
  STATE_134:0 "코노트"
  STATE_135:0 "먼스터"
  STATE_136:0 "애버딘셔"
- STATE_137:0 "크림 반도"
+ STATE_137:0 "크림반도"
  STATE_138:0 "스코네"
  STATE_139:0 "스몰란드"
  STATE_140:0 "베스테르예틀란드"
@@ -150,7 +150,7 @@ l_english:
  STATE_148:0 "라피"
  STATE_149:0 "포흐얀마"
  STATE_150:0 "카이누"
- STATE_151:0 "오스트스위스"
+ STATE_151:0 "오스트슈바이츠"
  STATE_152:0 "오버외스터라이히"
  STATE_153:0 "티롤"
  STATE_154:0 "알푈드"
@@ -174,8 +174,8 @@ l_english:
  STATE_172:0 "나바라"
  STATE_173:0 "그라나다"
  STATE_174:0 "레온"
- STATE_175:0 "라 만차"
- STATE_176:0 "카스틸랴 라 비에하"
+ STATE_175:0 "라만차"
+ STATE_176:0 "카스티야라비에하"
  STATE_177:0 "발레아레스 제도"
  STATE_178:0 "카나리아 제도"
  STATE_179:0 "베자"
@@ -183,9 +183,9 @@ l_english:
  STATE_181:0 "구아르다"
  STATE_182:0 "크레타"
  STATE_183:0 "크브르스"
- STATE_184:0 "벨로모르스카 트라키야"
+ STATE_184:0 "벨로모르스카트라키야"
  STATE_185:0 "이피로스"
- STATE_186:0 "펠로폰네소스 반도"
+ STATE_186:0 "펠로폰네소스반도"
  STATE_187:0 "에게해 제도"
  STATE_188:0 "메멜"
  STATE_189:0 "샤울랴이"
@@ -209,7 +209,7 @@ l_english:
  STATE_207:0 "오르샤"
  STATE_208:0 "루가"
  STATE_209:0 "프스코프"
- STATE_210:0 "비테브스크"
+ STATE_210:0 "비텝스크"
  STATE_211:0 "부르가스"
  STATE_212:0 "플로브디프"
  STATE_213:0 "무르만스크"
@@ -226,13 +226,13 @@ l_english:
  STATE_224:0 "브랸스크"
  STATE_225:0 "수미"
  STATE_226:0 "카테리노슬라우"
- STATE_227:0 "유조프카"
+ STATE_227:0 "유좁카"
  STATE_228:0 "루한스크"
  STATE_229:0 "아제르바이잔"
  STATE_230:0 "하야스탄"
  STATE_231:0 "사카르트벨로"
  STATE_232:0 "그로즈니"
- STATE_233:0 "블라디카프카즈"
+ STATE_233:0 "블라디캅카스"
  STATE_234:0 "예카테리노다르"
  STATE_235:0 "스타브로폴"
  STATE_236:0 "아스트라한"
@@ -251,7 +251,7 @@ l_english:
  STATE_249:0 "카잔"
  STATE_250:0 "심비르스크"
  STATE_251:0 "사마라"
- STATE_252:0 "니즈니 노보그라드"
+ STATE_252:0 "니즈니노보그라드"
  STATE_253:0 "이바노보"
  STATE_254:0 "랴잔"
  STATE_255:0 "펜자"
@@ -261,7 +261,7 @@ l_english:
  STATE_259:0 "폴타바"
  STATE_260:0 "보로네시"
  STATE_261:0 "오하이오"
- STATE_262:0 "페쵸라"
+ STATE_262:0 "페초라"
  STATE_263:0 "노브고로드"
  STATE_264:0 "티흐빈"
  STATE_265:0 "카미신"
@@ -273,13 +273,13 @@ l_english:
  STATE_271:0 "아디스아바바"
  STATE_272:0 "세네갈"
  STATE_273:0 "피잔"
- STATE_274:0 "황금 해안"
+ STATE_274:0 "골트퀴스테"
  STATE_275:0 "트란스발"
  STATE_276:0 "남부 온타리오"
  STATE_277:0 "멕시코"
- STATE_278:0 "부에노스 아이레스"
+ STATE_278:0 "부에노스아이레스"
  STATE_279:0 "산티아고"
- STATE_280:0 "마토 그로소"
+ STATE_280:0 "마투그로수"
  STATE_281:0 "몰디브"
  STATE_282:0 "간토"
  STATE_283:0 "간쑤"
@@ -296,12 +296,12 @@ l_english:
  STATE_294:0 "오만"
  STATE_295:0 "프리드리히슈타트"
  STATE_296:0 "포르투갈령 기니"
- STATE_297:0 "적도 기니"
- STATE_298:0 "후추 해안"
- STATE_299:0 "이슬라스 말비나스"
+ STATE_297:0 "적도기니"
+ STATE_298:0 "곡물해안"
+ STATE_299:0 "말비나스 제도"
  STATE_300:0 "우루과이"
  STATE_301:0 "파라과이"
- STATE_302:0 "라 파스"
+ STATE_302:0 "라파스"
  STATE_303:0 "리마"
  STATE_304:0 "파나마"
  STATE_305:0 "에콰도르"
@@ -313,7 +313,7 @@ l_english:
  STATE_311:0 "벨리즈"
  STATE_312:0 "산페드로술라"
  STATE_313:0 "과테말라"
- STATE_314:0 "엘 살바도르"
+ STATE_314:0 "엘살바도르"
  STATE_315:0 "아바나"
  STATE_316:0 "코스타리카"
  STATE_317:0 "니카라과"
@@ -321,19 +321,19 @@ l_english:
  STATE_319:0 "도미니카 공화국"
  STATE_320:0 "마드라스"
  STATE_321:0 "고아"
- STATE_322:0 "티벳"
+ STATE_322:0 "티베트"
  STATE_323:0 "네팔"
  STATE_324:0 "부탄"
  STATE_325:0 "윈난"
  STATE_326:0 "홍콩"
  STATE_327:0 "중부 루존"
  STATE_328:0 "안둥"
- STATE_329:0 "탄누투바"
+ STATE_329:0 "투바"
  STATE_330:0 "몽골"
  STATE_331:0 "뉴펀들랜드"
  STATE_332:0 "래브라도"
- STATE_333:0 "북부 보르네오"
- STATE_334:0 "서 칼리만탄"
+ STATE_333:0 "노르트보르네오"
+ STATE_334:0 "서부 칼리만탄"
  STATE_335:0 "중앙 자바"
  STATE_336:0 "싱가포르"
  STATE_337:0 "페로 제도"
@@ -542,7 +542,7 @@ l_english:
  STATE_540:0 "앙골라"
  STATE_541:0 "쥐트베스트아프리카"
  STATE_542:0 "베추아날랜드"
- STATE_543:0 "마다가스카르"
+ STATE_543:0 "마다가스카어"
  STATE_544:0 "잠베지아"
  STATE_545:0 "로디지아"
  STATE_546:0 "탕가니카"
@@ -702,26 +702,26 @@ l_english:
  STATE_700:0 "시에라리온"
  STATE_701:1 "카친"
  STATE_702:0 "카보베르데"
- STATE_703:0 "히멜파르츠 섬"
+ STATE_703:0 "히멜파르츠섬"
  STATE_704:0 "장크트헬레나"
  STATE_705:0 "상투메"
- STATE_706:0 "호엔촐레른가 제도"
- STATE_707:0 "모리셔스"
+ STATE_706:0 "호엔촐레른 제도"
+ STATE_707:0 "마우리티우스"
  STATE_708:0 "코모로"
- STATE_709:0 "쿤 군도"
- STATE_710:0 "차고스아르치펠"
- STATE_711:0 "베흐나친즐"
- STATE_712:0 "칼뮐러 제도"
- STATE_713:0 "나이팅게일 섬"
+ STATE_709:0 "퀸 군도"
+ STATE_710:0 "차고스 군도"
+ STATE_711:0 "바이나흐츠섬"
+ STATE_712:0 "카를뮐러 제도"
+ STATE_713:0 "나흐티갈섬"
  STATE_714:0 "넌장"
  STATE_715:0 "랴오베이"
  STATE_716:0 "봉천"
  STATE_717:0 "허장"
  STATE_718:0 "몰트케슈타트"
  STATE_719:0 "나탈"
- STATE_720:0 "성 페드로 섬"
+ STATE_720:0 "성페드로섬"
  STATE_721:0 "포르투갈령 티모르"
- STATE_722:0 "페트사모"
+ STATE_722:0 "페차모"
  STATE_723:0 "남섬"
  STATE_724:0 "크라 지협"
  STATE_725:0 "나보도"
@@ -729,8 +729,8 @@ l_english:
  STATE_727:0 "라인 제도"
  STATE_728:0 "광저우만"
  STATE_729:0 "마카오"
- STATE_730:0 "생피에르에 미클롱 섬"
- STATE_731:0 "유즈나 마케도니아"
+ STATE_730:0 "생피에르에미클롱섬"
+ STATE_731:0 "유즈나마케도니야"
  STATE_732:0 "페르가나"
  STATE_733:0 "안다만 제도"
  STATE_734:0 "티레니어스 제도"
@@ -739,15 +739,15 @@ l_english:
  STATE_737:0 "비스마르크 군도"
  STATE_738:0 "아루 제도"
  STATE_739:0 "하이다과이"
- STATE_740:0 "밴쿠버 섬"
+ STATE_740:0 "밴쿠버섬"
  STATE_741:0 "도이치발로니엔"
  STATE_742:0 "아브루초"
  STATE_743:0 "상하이"
- STATE_744:0 "칭다우"
+ STATE_744:0 "칭타우"
  STATE_745:0 "다롄"
  STATE_746:0 "닝보"
  STATE_747:0 "푸저우"
- STATE_748:0 "서 시캉"
+ STATE_748:0 "서부 시캉"
  STATE_749:0 "타나오스리"
  STATE_750:1 "프놈펜"
  STATE_751:0 "시라트말레이"
@@ -768,7 +768,7 @@ l_english:
  STATE_766:0 "지로카스터르"
  STATE_767:0 "니시"
  STATE_768:0 "테살리아"
- STATE_769:0 "동부 마케도니야"
+ STATE_769:0 "이스토치나마케도니야"
  STATE_770:0 "플로븐"
  STATE_771:0 "바르나"
  STATE_772:0 "도브루자"
@@ -817,7 +817,7 @@ l_english:
  STATE_815:0 "고라크푸르"
  STATE_816:0 "동부 구이저우"
  STATE_817:0 "루시용"
- STATE_818:0 "관타나모 만"
+ STATE_818:0 "관타나모만"
  STATE_819:0 "케르퀴크"
  STATE_820:0 "산티아고 쿠바"
  STATE_821:0 "파블로흐라드"
@@ -935,12 +935,12 @@ l_english:
  STATE_933:0 "버몬트"
  STATE_934:0 "뉴햄프셔"
  STATE_935:0 "로드아일랜드"
- STATE_936:0 "바랑게르 반도"
+ STATE_936:0 "바랑게르반도"
  STATE_937:0 "핀마르크스비다"
  STATE_938:0 "셰틀랜드"
  STATE_939:0 "오크니"
  STATE_940:0 "올리벤사"
- STATE_941:0 "독일령 사모아"
+ STATE_941:0 "도이치사모아"
  STATE_942:0 "포어아를베르크"
  STATE_943:0 "오트사부아"
  STATE_944:0 "하라르"
@@ -964,7 +964,7 @@ l_english:
  STATE_962:0 "마루아"
  STATE_963:0 "아칸란트"
  STATE_964:0 "암볼란드"
- STATE_965:0 "다르에스살람"
+ STATE_965:0 "다레살람"
  STATE_966:0 "힌털란드"
  STATE_967:0 "모리타니 사막"
  STATE_968:0 "아드라르"
@@ -985,7 +985,7 @@ STATE_982:0 "아시르"
 STATE_983:0 "브르타뉴"
 STATE_984:0 "피레네"
 STATE_985:0 "캔버라"
-STATE_986:0 "북 퀸즐랜드"
+STATE_986:0 "북부 퀸즐랜드"
 STATE_987:0 "킴벌리"
 STATE_988:0 "필바라"
 STATE_989:0 "살로니카"
@@ -993,8 +993,8 @@ STATE_990:0 "자우프"
 STATE_991:0 "하사"
 STATE_992:0 "카심"
 STATE_993:0 "카타르"
-STATE_994:0 "알 에사쉬"
-STATE_995:0 "알 쿠르마"
+STATE_994:0 "알에사쉬"
+STATE_995:0 "알쿠르마"
 STATE_996:0 "웨이하이웨이"
 STATE_997:0 "나히체반"
 STATE_998:0 "슈니크"
@@ -1015,7 +1015,7 @@ STATE_1012:0 "남부 광동"
 STATE_1013:0 "북부 후난"
 STATE_1014:0 "동부 안후이"
 STATE_1015:0 "산시"
-STATE_1016:0 "동 칼리만탄"
+STATE_1016:0 "동부 칼리만탄"
 STATE_1017:0 "네덜란드령 티모르"
 STATE_1018:0 "플로레스 제도"
 STATE_1019:0 "동부 자바"
