--- a/Kaiserreich Korean Translation/localisation/KR_Venezuela_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Venezuela_l_english.yml
@@ -10,7 +10,7 @@ VENsafe_desc:0 "Our economy now relies less on Oil Exports"
 VENsupersafe:0 "More Diversified Economy"
 VENsupersafe_desc:0 "Our economy now relies even less on Oil Exports"
 VENwell:0 "Economic Recovery"
-VENwell_desc:0 "Our economy has bounced back from the crisis. It seems that the worst is over.."
+VENwell_desc:0 "Our economy has bounced back from the crisis. It seems that the worst is over..."
 VENlandform:0 "Land Reform"
 VENlandform_desc:0 "By the people for the people, the lands worked by the peasants will soon belong to them"
 VENblackmonday:0 "Black Monday Hits the Oil Wells"
@@ -50,7 +50,7 @@ VEN_indreseach_desc:0 "Investing in industrial improvements is the key for a bet
 VEN_ecofac_desc:0 "As we increase investments in our industry, we will gradually improve the situation in our cities and create domestic demand for our raw materials"
 VEN_ecofac:0 "Industrial Construction"
 VEN_indreseach2:0 "Industrial Advancements"
-VEN_ecofac2_desc:0 "Our efforts to industrialise our nation in an import substuition effort continue, and now more than ever we must ensure its sucess"
+VEN_ecofac2_desc:0 "Our efforts to industrialise our nation in an import substitution effort continue, and now more than ever we must ensure its success"
 VEN_ecofac2:0 "Industrial Effort"
 VEN_inf:0 "Emergency Infrastructure Works"
 VEN_inf_desc:0 "If we are to take Venezuela to the future, we will need to ensure goods and services can roam freely. In Venezuela, this is not the case, for we have too few railways and one too many beaten tracks. These will be our first steps to truly modernising Venezuela"
@@ -83,7 +83,7 @@ VEN_flexibilty_desc:0 "We need to ensure Oil is not our only export from a stati
 VEN_thedutchdisease:0 "Dealing with the Dutch Disease"
 VEN_thedutchdisease_desc:0 "Venezuela is hopelessly addicted with Oil. If we are ever to advance as a nation, we must take steps to diminish our dependency in this commodity"
 VEN_blackmondaysafe:0 "Safety from Market Fluctuations"
-VEN_blackmondaysafe_desc:0 "Even a diverse economy is vulnerable to market fluctuations such as Black Monday. Let us ensure we cant react properly next time"
+VEN_blackmondaysafe_desc:0 "Even a diverse economy is vulnerable to market fluctuations such as Black Monday. Let us ensure we can't react properly next time"
 VEN_economicalbonanza:0 "Economic Bonanza"
 VEN_economicalbonanza_desc:0 "Our Economy is in an unprecedented booming state, with all industries seemingly growing. Our efforts have finally paid off!"
 VEN_homefrontwon:0 "Victory in the Homefront"
@@ -156,8 +156,8 @@ VEN_powertothepeople:0 "Power to the People!"
 VEN_powertothepeople_desc:0 "Finally, Venezuela is not under the thumb of a shady clique of generals, but of the people!"
 VEN_collectivistprinciples:0 "Collectivist Principles"
 VEN_collectivistprinciples_desc:0 "We must ensure that every man and woman puts the needs of the majority before their own, for this is what the true goal of our revolution is in the end"
-VEN_flameoffreedom:0 "The Flame of Freedom" 
-VEN_flameoffreedom_desc:0 "The peoples of Venezuela and the world are awakening! Our resolve has never been stronger to free this earth from it's slavemasters, and break it's chains, no matter the cost!"
+VEN_flameoffreedom:0 "The Flame of Freedom"
+VEN_flameoffreedom_desc:0 "The peoples of Venezuela and the world are awakening! Our resolve has never been stronger to free this earth from it's slave masters, and break it's chains, no matter the cost!"
 VEN_researchjoineffort:0 "Joint Research Effort"
 VEN_researchjoineffort_desc:0 "With the aid of our able comrades, we will make strides we never thought possible in many fields!"
 VEN_begin_land_reform:0 "Begin Land Reform"
