--- a/Kaiserreich Korean Translation/localisation/KR_Yunnan_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Yunnan_l_english.yml
@@ -194,8 +194,7 @@ yunnan.31.a:0 "쑹칭링과 저우수런의 중국 국민당 좌파"
 yunnan.31.b:0 "후스의 자유당이 과반수를 확보했다!"
 yunnan.31.c:0 "천중밍이 민국을 지킬 것이다!"
 yunnan.32.t:0 "총선거"
-yunnan.32.d:0 "우리 나라의 부분적 통일에 따라, 우리는 어느 정당이 쑨원의 유산에 따라 중국을 이끌지 밝혀내야 한다.
-약법에 따라, 자유 중국은 두 번째 국회 선거를 경험할 것이며 각 정당의 보수파들은 수 개월 동안 준비하고 있다. 하지만, 인민들의 지지를 얻을 새 인물이 중국 청년당에서 부상하고 있다."
+yunnan.32.d:0 "우리 나라의 부분적 통일에 따라, 우리는 어느 정당이 쑨원의 유산에 따라 중국을 이끌지 밝혀내야 한다. 약법에 따라, 자유 중국은 두 번째 국회 선거를 경험할 것이며 각 정당의 보수파들은 수 개월 동안 준비하고 있다. 하지만, 인민들의 지지를 얻을 새 인물이 중국 청년당에서 부상하고 있다."
 yunnan.32.a:0 "쑹칭링과 저우수런의 중국 국민당 좌파!"
 yunnan.32.b:0 "후스의 자유당이 과반수를 확보했다!"
 yunnan.32.c:0 "천중밍의 보수당!"
@@ -336,80 +335,17 @@ YUN_NAV_effort_desc:0 "수면 아래에서 새로운 해전이 벌어지듯, 수
 YUN_naval_effort:0 "해군 개발"
 YUN_naval_effort_tt:0 "§Y해군 부두§를 위한 건물 슬롯이 부족합니다!"
 YUN_naval_effort_desc:0 "ThYUN_equipment_effort_desc:0 "보병이 운반하는 장비의 제한은 끊임없이 힘들어지고 있다. 우리는 가능한 한 최고의 도구를 부대에 지급하기 위해 집중할 것이다."
-YUN_motorization_effort:0 "차량화 개발"
-YUN_motorization_effort_desc:0 "기동성과 방호력은 야전에 나가는 보병의 안전에 있어 중요하다. 이것들의 개발에 집중하는 것은 우리에게 신속한 행동을 허락할 것이다."
-YUN_doctrine_effort:0 "교리 개발"
-YUN_doctrine_effort_desc:0 "군사 교리는 대전쟁의 지상 전투가 시대에 뒤쳐졌음을 밝혀냈다. 우리의 위대한 지성들은 미래 군사 사상의 성형에 대한 임무를 가지고 있다."
-YUN_equipment_effort_2:0 "장비 개발 II"
-YUN_equipment_effort_2_desc:0 "우리는 보병과 지원 부대가 이 시대의 가장 뛰어난 장비로 무장하기 위한 노력을 계속할 것이다."
-YUN_mechanization_effort:0 "기계화 개발"
-YUN_mechanization_effort_desc:0 "차량화 보병의 가능성에 대한 검토는 오늘 우리가 만들 차량의 한계를 밀어붙이게 했다."
-YUN_doctrine_effort_2:0 "교리 개발 II"
-YUN_doctrine_effort_2_desc:0 "전간기 뿐만 아니라, 최근의 분쟁에서도 전장은 변화하고 있다. 우리는 교리가 이것을 반영하고 있는지 재평가 해야 한다."
-YUN_equipment_effort_3:0 "장비 개발 III"
-YUN_equipment_effort_3_desc:0 "타국의 장비를 모방하거나 구입하는 거 대신, 우리는 세계에서 선도적인 보병 장비를 목표로 해야 한다."
-YUN_armor_effort:0 "기갑 개발"
-YUN_armor_effort_desc:0 "보병 기계화의 교훈을 적용하여, 우리는 기갑 차량을 발전시킬 수 있었다"
-YUN_special_forces:0 "특수 부대"
-YUN_special_forces_desc:0 "우리는 정예 부대가 필요하다. 산악화부대, 공수부대는 우선시 돼야 한다."
-
-YUN_aviation_effort:0 "항공 개발"
-YUN_aviation_effort_tt:0 "§Y공군 기지§! 를 위한 건물 슬롯이 부족합니다!"
-YUN_aviation_effort_desc:0 "항공전보다 기술의 진보가 빠른 곳은 없습니다. 항공은 어떠한 현대 국가라도 통달해야 할 분야입니다."
-YUN_fighter_focus:0 "전투기 중점"
-YUN_fighter_focus_desc:0 "우린 대전쟁에서 도그 파이트의 마지막을 보지 못했습니다. 전투기 개발에 앞서나가는 것은 우리가 첨단에 있게 할 것입니다."
-YUN_bomber_focus:0 "폭격기 중점"
-YUN_bomber_focus_desc:0 "사람들이 미래 전쟁의 공포에 대해 말할 때, 하늘에서 쏟아지는 불벼락은 두드러지는 특징입니다. 우리는 반드시 그 이야기가 적들에게 말해지도록 해야합니다."
-YUN_aviation_effort_2:0 "항공 개발 II"
-YUN_aviation_effort_2_desc:0 "항공의 더한 진보는 우리 항공대가 다른 군과 동급에 위치할 것을 필요로 합니다."
-YUN_CAS_effort:0 "근접지원항공기 개발"
-YUN_CAS_effort_desc:0 "현대 군대는 지상 뿐만 아니라, 하늘에서도 지원을 필요로 합니다."
-YUN_rocket_effort:0 "로켓 개발"
-YUN_rocket_effort_desc:0 "로켓과 제트 엔진은 유인과 무인 항공기를 통틀어 전례없는 속도를 자랑합니다. 이 기술들에서 앞서나가는 것은 적들을 놀라게 할 것입니다."
-YUN_NAV_effort:0 "뇌격기 개발"
-YUN_NAV_effort_desc:0 "수면 아래에서 새로운 해전이 벌어지듯, 수면 위 창공에서도 새로운 해전이 벌어집니다."
-
-YUN_naval_effort:0 "해군 개발"
-YUN_naval_effort_tt:0 "§Y해군 부두§를 위한 건물 슬롯이 부족합니다!"
-YUN_naval_effort_desc:0 "해군 확장은 우리의 최우선 과제여야 합니다. 모든 가용 자원을 새 부두와 경수상함 연구에 투입해야 합니다."
-YUN_flexible_navy:0 "유연한 해군"
-YUN_flexible_navy_desc:0 "잠수함의 기술 발전을 고려한 해전의 재설계는 효율적인 호송 선단 타격을 가능하게 할 것입니다."
-YUN_large_navy:0 "대양해군"
-YUN_large_navy_desc:0 "우리 해군 교리를 대형함의 수용과 무역 선단의 안전 보장에 맞추려면, 어떤 종류의 배가 필요할지 알 것입니다."
-YUN_submarine_effort:0 "잠수함 노력"
-YUN_submarine_effort_desc:0 "잠수함전은 어뢰정의 개발 이래 가장 흥미로운 분야입니다. 우리는 잠수함을 단순 호위에 사용하는 게 아니라, 적 선박을 공격하는데 쓸 것입니다."
-YUN_cruiser_effort:0 "순양함 개발"
-YUN_cruiser_effort_desc:0 "진보된 전함 연구 이전에, 더 작은 순양함들의 대체가 필요합니다."
-YUN_destroyer_effort:0 "구축함 개발"
-YUN_destroyer_effort_desc:0 "잠수함의 설계와 전략적 활용에 대한 연구와 함께, 그에 대한 대응책이 필요합니다. 구축함은 이에 필수적입니다."
-YUN_capital_ships_effort:0 "주력함 개발"
-YUN_capital_ships_effort_desc:0 "가장 많은 전함을 가진 국가가 대양을 지배합니다. 전함과 항공모함은 해양 패권의 신구를 대표합니다."
-
-YUN_industrial_effort:0 "산업 개발"
-YUN_industrial_effort_desc:0 "Focus all our political efforts on building up the civilian industry in a great leap forward."
-YUN_industrial_effort_2:0 "산업 개발 II"
-YUN_industrial_effort_2_desc:0 "With iron will and a relentless work ethic, we can mobilise the people in another great industrial effort."
-YUN_construction_effort:0 "건축 개발"
-YUN_construction_effort_tt:0 "Not enough building slots for §YCivilian Factories§!"
-YUN_construction_effort_desc:0 "Civilian industrial capacity must not be underestimated even when war looms over the world."
-YUN_production_effort:0 "군수공장 개발"
-YUN_production_effort_tt:0 "Not enough building slots for §YMilitary Factory§!"
-YUN_production_effort_desc:0 "If you can build tractors, you can build tanks! We must not allow our military production capacity to lag behind."
-YUN_construction_effort_2:0 "건축 개발 II"
-YUN_construction_effort_2_desc:0 "Continuing to expand our factories will allow us to speed up production of goods for trade and further construction efforts."
-YUN_production_effort_2:0 "군수공장 개발 II"
-YUN_production_effort_2_desc:0 "Trying to adapt civilian factories to pre expansion of our navy should be our first priority. Assign all available resources to new Dockyards and research into light surface ships."
 YUN_flexible_navy:0 "유연한 해군"
 YUN_flexible_navy_desc:0 "Reinventing naval warfare to account for the advances in submarine technology will allow us to strike efficiently against enemy convoys."
-YUN_large_navy:0 "대양 "
+YUN_large_navy:0 "대양 해군"
 YUN_large_navy_desc:0 "Adapting our naval doctrines to accommodate large ships and ensuring the safety of our trade convoys will teach us much about what sort of ships we need."
-YUN_submarine_effort:0 "Submarine Effort"
+YUN_submarine_effort:0 "잠수함 개발"
 YUN_submarine_effort_desc:0 "Submarine warfare is the most exciting naval development since the invention of the torpedo boat. We would do well to not just protect against submarines, but also use them against enemy shipping."
-YUN_cruiser_effort:0 "Cruiser Effort"
+YUN_cruiser_effort:0 "순양함 개발"
 YUN_cruiser_effort_desc:0 "Before making forays into advanced battleship research, the smaller cruisers are in need of replacement."
-YUN_destroyer_effort:0 "Destroyer Effort"
+YUN_destroyer_effort:0 "구축함 개발"
 YUN_destroyer_effort_desc:0 "Studying the design and strategic use of submarines, we have also learned how to counter those strategies. Destroyers will be crucial for this."
-YUN_capital_ships_effort:0 "Capital Ship Effort"
+YUN_capital_ships_effort:0 "주력함 개발"
 YUN_capital_ships_effort_desc:0 "The nation with the most battleships will rule the oceans. Battleships and carriers represent the old and the new in naval superiority."
 
 YUN_industrial_effort:0 "Industrial Effort"
