--- a/Kaiserreich Korean Translation/localisation/KR_Russia_Foreign_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_Foreign_l_english.yml
@@ -29,7 +29,7 @@ RUS_central_asia_focus_desc:0 "Unlike the Caucasus region, there is no German in
 RUS_secure_kazakhstan:0 "카자흐스탄 확보"
 RUS_secure_kazakhstan_desc:0 "Kazakhstan is vast and wealthy. Once brought into the fold we can look even further south, to Turkestan and even Iran!"
 ALO_stayed_russia:0 "알라쉬 자치국은 왕정으로 남아야한다"
-RUS_integrate_kazakhstan:0 "알라 자치국 합병"
+RUS_integrate_kazakhstan:0 "알라쉬 자치국 합병"
 RUS_integrate_kazakhstan_desc:0 "Kazakhstan is vast and wealthy and more than that they are loyal. Once brought into the fold again we can look even further south, to Turkestan and even Iran!"
 RUS_secure_turkestan:0 "투르케스탄 확보"
 RUS_secure_turkestan_desc:0 "Turkestan is not particularly wealthy or even populous. But soon enough, it will be ours, and it will serve excellently as a bridgehead to the wealthy Iranian and Indian provinces, should we need it."
